crates/apollo-compiler/test_data/diagnostics/0068_subselection_of_union.txt
Error: interface, union and object types must have a subselection set
   ╭─[0068_subselection_of_union.graphql:2:3]
   │
 2 │   pet1
   │   ──┬─  
   │     ╰─── `Query.pet1` is a union type `CatOrDog` and must select fields
───╯
Error: interface, union and object types must have a subselection set
   ╭─[0068_subselection_of_union.graphql:3:3]
   │
 3 │   pet2
   │   ──┬─  
   │     ╰─── `Query.pet2` is a union type `CatOrDog` and must select fields
───╯
Error: interface, union and object types must have a subselection set
   ╭─[0068_subselection_of_union.graphql:4:3]
   │
 4 │   pet3
   │   ──┬─  
   │     ╰─── `Query.pet3` is a union type `CatOrDog` and must select fields
───╯
Error: interface, union and object types must have a subselection set
   ╭─[0068_subselection_of_union.graphql:5:3]
   │
 5 │   pet4
   │   ──┬─  
   │     ╰─── `Query.pet4` is a union type `CatOrDog` and must select fields
───╯
Error: interface, union and object types must have a subselection set
   ╭─[0068_subselection_of_union.graphql:6:3]
   │
 6 │   pet5
   │   ──┬─  
   │     ╰─── `Query.pet5` is a union type `CatOrDog` and must select fields
───╯
Error: interface, union and object types must have a subselection set
   ╭─[0068_subselection_of_union.graphql:7:3]
   │
 7 │   pet6
   │   ──┬─  
   │     ╰─── `Query.pet6` is a union type `CatOrDog` and must select fields
───╯

